<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/login_and_register_layout_config"
    tools:context="com.example.steven.patataschat.Activities.SignupActivity">

    <TextView
        style="@style/login_and_register_text"
        android:text="@string/select_image" />

    <ImageView
        android:id="@+id/profile_pic"
        style="@style/profile_pic_style"
        android:onClick="select_image"
        android:src="@drawable/ic_image_black_24dp" />

    <EditText
        android:id="@+id/user_textField"
        style="@style/login_and_register_textfield"
        android:drawableStart="@drawable/ic_nickname_24dp"
        android:hint="@string/username_hint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/mail_textField"
        style="@style/login_and_register_textfield"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_textField"
        style="@style/login_and_register_textfield"
        android:drawableStart="@drawable/ic_password_24dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_button"
        style="@style/login_and_register_button"
        android:text="@string/sign_up_text" />



</LinearLayout>
