<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.ChatInterfaceActivity">

    <item android:id="@+id/chats"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/tab_1"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/tab_2"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/configuration"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:title="@string/tab_3"
        app:showAsAction="ifRoom">
    </item>

</menu>