<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.steven.patataschat.Activities.ManageUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/users_view"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/nick_button"
                android:text="@string/manage_button_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setAction"/>

            <Button
                android:id="@+id/rank_button"
                android:text="@string/manage_button_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setAction"/>

            <Button
                android:id="@+id/mute_button"
                android:text="@string/manage_button_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setAction"/>

            <Button
                android:id="@+id/ban_button"
                android:text="@string/manage_button_ban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setAction"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/text_info"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_username_name_empty"/>

        <EditText
            android:id="@+id/edit_text"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/manage_username_name_empty"
            />

        <Spinner
            android:id="@+id/rank_spinner"
            android:layout_margin="@dimen/chatList_layout_margins"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_action"
            android:layout_margin="5dp"
            android:text="@string/manage_button_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="doAction"/>

    </LinearLayout>

</LinearLayout>
