<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_Recycler"
    tools:context="com.example.steven.patataschat.Activities.ChatRoomActivity">

    <include
        android:id="@+id/chat_toolbar"
        layout="@layout/chatroom_toolbar"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/color_IEmotion_cardView"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/more_opt_button"
            style="@style/chatroom_icons_config"
            android:contentDescription="@string/contentDescription1"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_image_black_24dp"
            android:onClick="uploadImage"/>

        <ImageButton
            android:id="@+id/reactions_button"
            android:contentDescription="@string/contentDescription1"
            style="@style/chatroom_icons_config"
            android:background="@drawable/ic_iemotions_24dp"
            android:onClick="iniIEmotions"/>

        <EditText
            android:id="@+id/message_textfield"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxHeight="250dp"
            android:enabled="false"
            android:hint="@string/editText_hint_normal"
            android:inputType="textCapSentences"
            android:background="@drawable/textbox_shape"/>

        <ImageButton
            android:id="@+id/send_button"
            android:contentDescription="@string/contentDescription2"
            style="@style/chatroom_icons_config"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_send_black_24dp"
            android:onClick="sendMessage"/>

    </LinearLayout>



</LinearLayout>
